Using Java's DatatypeConverter for Base64 encoding.